--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap');
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Consolas';
+  font-family: 'Montserrat', sans-serif;
   user-select: none;
 }
 
 .text {
   padding: 20px;
-  font-size: 24px;
-  line-height: .8;
+  font-size: 18px;
+  line-height: 1;
   text-align: center;
 }
 
