--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,6 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Montserrat', sans-serif;
-  user-select: none;
 }
 
 .text {
@@ -13,6 +12,10 @@
   font-size: 18px;
   line-height: 1;
   text-align: center;
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
 }
 
 .container {
