--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@
   align-items: center;
   justify-content: center;
   background: white;
+  cursor: pointer;
 }
 
 .box {
@@ -38,6 +39,10 @@
   /* background: peachpuff; */
   overflow: hidden;
   /* border: solid 2px black; */
+}
+
+.container:active .sun{
+  animation: sun 2s linear infinite;
 }
 
 .box-svg {
